Added deploy Dockerfile for react app

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Bank App MIT xPRO</title>
+    <meta name="google-site-verification" content="dskhEB4YzdaBhCAZ3IywceCaaFbDFmhU4oylqKN5p3g" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
